--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,3 @@
-<div class="card-footer fixed-bottom text-left">
+<div class="card-footer text-left">
     <p>JAAR, {{ 'now'|date('Y') }}</p>
 </div>
