--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,3 +27,8 @@
         </div>
     </div>
 {% endblock %}
+{% block footer %}
+    <div class="card-footer fixed-bottom text-left">
+        <p>JAAR, {{ 'now'|date('Y') }}</p>
+    </div>
+{% endblock %}
