--- a/templates/subscription/index.html.twig
+++ b/templates/subscription/index.html.twig
@@ -18,3 +18,8 @@
         </div>
     </div>
 {% endblock %}
+{% block footer %}
+    <div class="card-footer text-left">
+        <p>JAAR, {{ 'now'|date('Y') }}</p>
+    </div>
+{% endblock %}
