--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,7 @@
 /* Custom styles */
-
+#subscribers_wrapper {
+    margin-bottom: 2em;
+}
 .page-item.active .page-link {
     z-index: 1;
     color: #dee2e6;
@@ -40,4 +42,7 @@
 .form-check-label {
     line-height: 2.3em;
     padding-left: 10%;
+}
+.card-footer p {
+    margin-left: 2.3%;
 }
