--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Subscribe to our News!{% endblock %}
+{% block title %}Edit subscriber{% endblock %}
 
 {% block body %}
     <div class="row">
@@ -41,4 +41,9 @@
             </form>
         </div>
     </div>
+{% endblock %}
+{% block footer %}
+<div class="card-footer fixed-bottom text-left">
+    <p>JAAR, {{ 'now'|date('Y') }}</p>
+</div>
 {% endblock %}
