--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -82,3 +82,8 @@
         });
     </script>
 {% endblock %}
+{% block footer %}
+    <div class="card-footer text-left">
+        <p>JAAR, {{ 'now'|date('Y') }}</p>
+    </div>
+{% endblock %}
