--- a/templates/subscription/success.html.twig
+++ b/templates/subscription/success.html.twig
@@ -23,3 +23,8 @@
         </div>
     </div>
 {% endblock %}
+{% block footer %}
+<div class="card-footer fixed-bottom text-left">
+    <p>JAAR, {{ 'now'|date('Y') }}</p>
+</div>
+{% endblock %}
