--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,9 @@
 /* Custom styles */
+.container {
+    margin-bottom: 4em;
+}
 #subscribers_wrapper {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 .page-item.active .page-link {
     z-index: 1;
