--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -83,7 +83,7 @@
     </script>
 {% endblock %}
 {% block footer %}
-    <div class="card-footer text-left navbar-fixed-bottom">
+    <div class="card-footer text-left fixed-bottom">
         <p>JAAR, {{ 'now'|date('Y') }}</p>
     </div>
 {% endblock %}
