--- a/templates/subscription/index.html.twig
+++ b/templates/subscription/index.html.twig
@@ -20,7 +20,7 @@
     </div>
 {% endblock %}
 {% block footer %}
-    <div class="card-footer text-left">
+    <div class="card-footer text-left fixed-bottom">
         <p>JAAR, {{ 'now'|date('Y') }}</p>
     </div>
 {% endblock %}
